# arust

./: Cargo.toml
src/: main.rs
