[package]
name = "rustdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bson2 (required)
serde = { version = "1", features = ["derive"] }
bson2 = "2.0"

# logging lib(required)
log = "0.4"
fast_log="1.3"

lazy_static = "1.4.0"

rbatis = { version = "3.0", default-features = false, features = ["mysql","runtime-async-std-rustls"] }
async-std = "1.10.0"
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3.17"
chashmap = "2.2.2"
itertools = "0.10.1"
